// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton renders correctly 1`] = `
<div>
  <button
    aria-pressed="false"
    class="css-psfrx5-BaseButton-Button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Flag message
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;

exports[`ToggleButton renders with no label 1`] = `
<div>
  <button
    aria-label="Flag message"
    aria-pressed="false"
    class="css-psfrx5-BaseButton-Button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span>
      <span
        class="css-oobk4c-Button"
      />
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;
